--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
     "@react-three/fiber": "^8.15.10",
-    "@types/file-type": "^10.9.1",
-    "file-saver": "^2.0.5",
-    "file-type": "^18.7.0",
+    "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-spring": "^9.7.3",
+    "react-reveal": "^1.2.2",
     "react-wavify": "^1.9.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
